name:            data-object-yaml
version:         0.0.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Support for serialising Haskell to and from Yaml.
description:     Binds to the libyaml library
category:        Web
stability:       unstable
cabal-version:   >= 1.2
build-type:      Simple
homepage:        http://github.com/snoyberg/yaml/tree/data-object-yaml
extra-source-files: c/helper.h,
                    c/yaml_private.h,
                    c/yaml.h

flag buildtests
  description: Build the executable to run unit tests
  default: False
flag nolib
  description: Skip building of the library
  default: False

library
    if flag(nolib)
        Buildable: False
    else
        Buildable: True
    build-depends:   base >= 4 && < 5,
                     data-object >= 0.2.0 && < 0.3,
                     bytestring >= 0.9.1.4 && < 0.10,
                     text >= 0.5 && < 0.6,
                     convertible-text >= 0.2.0 && < 0.3,
                     attempt >= 0.2.0 && < 0.3
    exposed-modules: Data.Object.Yaml
                     Data.Object.Yaml.Internal
    other-modules:   Data.Object.Yaml.Lib
    ghc-options:     -Wall
    c-sources:       c/helper.c,
                     c/api.c,
                     c/dumper.c,
                     c/emitter.c,
                     c/loader.c,
                     c/parser.c,
                     c/reader.c,
                     c/scanner.c,
                     c/writer.c
    include-dirs:    c

executable           runtests
    if flag(buildtests)
        Buildable: True
        cpp-options:     -DTEST
        build-depends:   test-framework,
                         test-framework-quickcheck,
                         test-framework-hunit,
                         HUnit,
                         QuickCheck >= 1 && < 2
    else
        Buildable: False
    ghc-options:     -Wall
    c-sources:       c/helper.c,
                     c/api.c,
                     c/dumper.c,
                     c/emitter.c,
                     c/loader.c,
                     c/parser.c,
                     c/reader.c,
                     c/scanner.c,
                     c/writer.c
    include-dirs:    c
    main-is:         runtests.hs
