name:            yaml
version:         0.8.8.4
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>, Anton Ageev <antage@gmail.com>,Kirill Simonov 
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Support for parsing and rendering YAML documents.
description:     Provides support for parsing and emitting Yaml documents.
                 .
                 This package includes the full libyaml C library version 0.1.2 by Kirill
                 Simonov (<http://pyyaml.org/wiki/LibYAML>) in the package so you
                 don't need to worry about any non-Haskell dependencies.
                 .
                 The package is broken down into two modules.
                 "Data.Yaml" provides a high-level interface based
                 around the JSON datatypes provided by the @aeson@
                 package. "Text.Libyaml" provides a lower-level,
                 streaming interface. For most users, "Data.Yaml" is recommended.
category:        Web
stability:       stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://github.com/snoyberg/yaml/
extra-source-files: c/helper.h,
                    libyaml/yaml_private.h,
                    libyaml/yaml.h,
		            libyaml/LICENSE
                    test/main.hs
                    test/largest-string.yaml
                    test/json.yaml

flag no-exe
  description: don't install the yaml2json or json2yaml executables
  default: False

flag system-libyaml
  description: Use the system-wide libyaml instead of the bundled copy
  default: False

library
    build-depends:   base >= 4 && < 5
                   , transformers >= 0.1
                   , bytestring >= 0.9.1.4
                   , conduit >= 1.0.11 && < 1.2
                   , resourcet >= 0.3 && < 1.2
                   , aeson >= 0.5
                   , containers
                   , unordered-containers
                   , vector
                   , text
                   , attoparsec
                   , scientific
    exposed-modules: Text.Libyaml
                     Data.Yaml
                     Data.Yaml.Aeson
                     Data.Yaml.Builder
                     Data.Yaml.Parser
    ghc-options:     -Wall
    c-sources:       c/helper.c
    include-dirs:    c
    if flag(system-libyaml)
            pkgconfig-depends: yaml-0.1
    else
            c-sources:       libyaml/api.c,
                             libyaml/dumper.c,
                             libyaml/emitter.c,
                             libyaml/loader.c,
                             libyaml/parser.c,
                             libyaml/reader.c,
                             libyaml/scanner.c,
                             libyaml/writer.c
            include-dirs:    libyaml

executable yaml2json
    if flag(no-exe)
      Buildable: False
    else
      Buildable: True

    hs-source-dirs: exe
    main-is: yaml2json.hs
    build-depends: base >= 4 && < 5
                 , yaml
                 , bytestring >= 0.9.1.4
                 , aeson >= 0.5

executable json2yaml
    if flag(no-exe)
      Buildable: False
    else
      Buildable: True

    hs-source-dirs: exe
    main-is: json2yaml.hs
    build-depends: base >= 4 && < 5
                 , yaml
                 , bytestring >= 0.9.1.4
                 , aeson >= 0.5


test-suite test
    type: exitcode-stdio-1.0
    hs-source-dirs:  test
    main-is:         main.hs
    cpp-options:     -DTEST
    build-depends:   hspec >= 1.3
                   , HUnit
                   , directory
                   , base >= 4 && < 5
                   , transformers >= 0.1
                   , bytestring >= 0.9.1.4
                   , conduit
                   , yaml
                   , text
                   , aeson
                   , unordered-containers
                   , vector
                   , resourcet
    ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/snoyberg/yaml
